--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,12 +11,14 @@ p {
     padding-left: 5px;
 }
 
+/********Navigation Section**********/
+
 ul.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #222;
 }
 
 ul.topnav li {
@@ -27,7 +29,7 @@ ul.topnav li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px;
     text-decoration: none;
 }
 
@@ -50,6 +52,47 @@ ul.topnav li.right {
     ul.topnav li.right, 
     ul.topnav li {float: none;}
 }
+
+
+/*********Dropdown**********/
+
+.dropbtn {
+    background-color: #222;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: inherit;
+    min-width: 160px;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: inherit;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: inherit;
+}
+
+/*************end dropdown**************/
 
 #banner {
     background-repeat: repeat;
