--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,7 +76,7 @@ body {
 .projects {
   margin: auto;
   text-align: center;
-  padding-top: 20px;
+  padding: 100px 100px;
 }
 
 .row {
@@ -132,4 +132,43 @@ body {
 /*----------END IMAGE GRID*----------*/
 
 
+/*--------------CONTACT FORM-----------*/
 
+.contact-heading {
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #333;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 45%;
+}
+
+input[type=submit]:hover {
+  background-color: #222;
+}
+
+.form-container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width:50%;
+}
