--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,44 +178,35 @@ body {
 
 /*--------------CONTACT FORM-----------*/
 
-.contact-heading {
-  margin: auto;
-  text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  font-size: 2em;
-}
-
 input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
+/* Style the submit button with a specific background color etc */
 input[type=submit] {
-  background-color: #333;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-left: 45%;
-  font-family: inherit;
-  margin-top: 20px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
+/* When moving the mouse over the submit button, add color */
 input[type=submit]:hover {
-  background-color: #7581d2;
+    background-color: #45a049;
 }
 
+/* Add a background color and some padding around the form */
 .form-container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  width:50%;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
