--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,8 +15,7 @@ body > div.jumbotron.jumbotron-fluid > div > p {
 
 /*NAVIGATION STYLE*/
 
-.nav-item,
-.nav-item dropdown {
+.nav-item {
    padding-right: 35px;
 }
 
@@ -25,6 +24,8 @@ body > div.jumbotron.jumbotron-fluid > div > p {
 .welcome-header {
     text-align: center;
     color: black;
+    margin-top: 100px;
+    padding-bottom: 50px;
     padding-top: 35px;
     max-width: 100%;
     height: 165px;
@@ -128,9 +129,15 @@ body > div.jumbotron.jumbotron-fluid > div > p {
   transform: translate3d(0,0,0);
 }
 
+.project-container {
+  padding-top: 175px;
+}
+
 /*CONTACT FORM*/
 
-
+.form-container {
+  width: 75%;
+}
 
 
 /*FOOTER*/
