--- a/quotes/style.css
+++ b/quotes/style.css
@@ -30,6 +30,7 @@ h2 {
 button {
   height:20px;
   position:relative;
+  background-color: white;
   margin: -20px -50px;
   width:100px;
   top:50%;
