--- a/quotes/style.css
+++ b/quotes/style.css
@@ -6,6 +6,7 @@ h1 {
   color: white;
   text-align: center;
   margin-top: 100px;
+  font-size: 3.5em;
 }
 
 h2 {
@@ -20,7 +21,8 @@ h2 {
   color: white;
   padding-top: 50px;
   padding-bottom: 100px;
-  position: absolute;
+  font-size: 2em;
+  font-family: cursive;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -35,5 +37,9 @@ button {
   width:100px;
   top:50%;
   left: 50%;
-  margin-top: 250px;
+  margin-top: 450px;
+}
+
+button .mybutton {
+  background-color: white;
 }
