--- a/stylesheet.css
+++ b/stylesheet.css
@@ -174,6 +174,8 @@ body > div:nth-child(4) {
 
 .hrstyle {
 	height: 10px;
+  padding-top: 50px;
+  margin-top: 60px;
 	border: 0;
 	box-shadow: 0 10px 10px -10px #8c8b8b inset;
 }
