--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,22 +1,24 @@
 body {
-  background-color: black;
+  background-color: lightgrey;
 }
 
 .container {
-  color: white;
+  color: black;
   text-align: center;
+  font-family: sans-serif;
+  font-size: 28px;
 }
 
 .calcForm {
   position: absolute;
   text-align: center;
-  color: white;
-  padding-top: 50px;
-  padding-bottom: 100px;
-  position: absolute;
+  background-color: darkblue;
+  margin-top: 50px;
+  padding: 15px;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
+  border-radius: 10%
 }
 
 .calcRow {
@@ -24,10 +26,21 @@ body {
 }
 
 .calcDisplay {
-  width: 110px
+  width: 200px;
+  height: 40px;
+  margin-bottom: 15px;
+  font-size: 32px;
+  margin-top: 20px;
 }
 
 .calcButton {
-  border-radius: 25%;
+  border-radius: 15%;
   font-weight: bold;
+  padding: 15px;
+  margin: 2px;
+  font-size: 16px;
+}
+
+#clearButton {
+  background-color: orange;
 }
