--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ h1, h2, p {
 
 .jumbotron {
     margin-bottom: 0px;
-    height: 650px;
+    height: 100vh;
     background-image: url("https://www.mistrisolutions.com/wp-content/uploads/2016/01/website-design-background.png");
     background-size: cover;
     background-position: 40% 90%;
