--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,7 +55,7 @@ h1, h2, p {
   overflow: hidden;
   position: relative;
   text-align: center;
-  cursor: default;
+  cursor: pointer;
   background: black;
 }
 
